--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-requests>=2.25.0
-beautifulsoup4>=4.9.0
-python-dotenv>=0.19.0
-feedparser>=6.0.0
-selenium>=4.0.0
-google-api-python-client>=2.0.0
-openai>=1.0.0
-pandas>=1.5.0
-pytz>=2022.1
-isodate>=0.7.2
+requests=2.25.0
+beautifulsoup4=4.9.0
+python-dotenv=0.19.0
+feedparser=6.0.0
+selenium=4.0.0
+google-api-python-client=2.0.0
+openai=1.0.0
+pandas=1.5.0
+pytz=2022.1
+isodate=0.7.2
 # Development dependencies
-black>=25.1.0
-isort>=5.10.0
-flake8>=4.0.0
-coverage>=7.0.0
-pytest-cov>=4.0.0
-pytest>=8.0.0
-pytest-xdist>=3.6.1
+black=25.1.0
+isort=5.10.0
+flake8=4.0.0
+coverage=7.0.0
+pytest-cov=4.0.0
+pytest=8.0.0
+pytest-xdist=3.6.1
 # bandit>=1.7.0
 # safety>=2.0.0
